--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,8 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - "main"
+      - "**"
+
 jobs:
   build:
     strategy:
@@ -13,40 +14,39 @@ jobs:
         config:
         - name: Windows
           os: windows-latest
-          target: Win32
+
         - name: Android32
           os: ubuntu-latest
           target: Android32
+
         - name: Android64
           os: ubuntu-latest
           target: Android64
-        
 
     name: ${{ matrix.config.name }}
     runs-on: ${{ matrix.config.os }}
 
     steps:
-      - uses: actions/checkout@v3
-        with:
-          submodules: 'recursive'
-          
+      - uses: actions/checkout@v4
+
       - name: Build the mod
         uses: geode-sdk/build-geode-mod@main
         with:
-          build-config: 'RelWithDebInfo'
+          bindings: nytelytee/bindings
+          bindings-ref: main
           combine: true
           target: ${{ matrix.config.target }}
-          bindings: nytelytee/bindings
 
   package:
     name: Package builds
     runs-on: ubuntu-latest
     needs: ['build']
+
     steps:
-      - uses: geode-sdk/build-geode-mod@combine
+      - uses: geode-sdk/build-geode-mod/combine@main
         id: build
 
-      - uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@v4
         with:
-          name: WaveTrailDragFix
+          name: Build Output
           path: ${{ steps.build.outputs.build-output }}
